Bug 129056 - CRASH: changing line's colour in chart sidebar
Summary: CRASH: changing line's colour in chart sidebar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2019-11-27 12:08 UTC by Xisco Faulí
Modified: 2019-12-13 20:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (7.19 KB, text/plain)
2019-11-27 20:54 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-27 12:08:53 UTC
I can reproduce this issue after https://cgit.freedesktop.org/libreoffice/core/commit/?id=2d01ed9e8be543460e41e009fa992103a7c8d4c0.
Before the mentioned commit, I don't know how to get the same sidebar.

Steps to reproduce:
1. Open Writer
2. Insert a chart
3. Click somewhere else in the document
4. Double click on the chart -> chart sidebar is displayed
5. Scroll down in the sidebar to the line section and change the color

-> Crash

Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: 3a6f270edfffb97763927b2732feacedbdac1e80
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-11-27 12:10:50 UTC
@Muhammet, I thought you might be interested in this issue...
Comment 2 Muhammet Kara 2019-11-27 13:03:13 UTC
I confirm it exists on

Version: 6.5.0.0.alpha0+
Build ID: a27046958b2339c4792f95a367040d92853f3af7
CPU threads: 16; OS: Linux 5.3; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Muhammet Kara 2019-11-27 13:24:18 UTC
I think that button needs to be disabled at that point.

(gdb) bt
#0  0x00007ffff7ae0e35 in raise () at /lib64/libc.so.6
#1  0x00007ffff7acb895 in abort () at /lib64/libc.so.6
#2  0x00007ffff7acb769 in _nl_load_domain.cold () at /lib64/libc.so.6
#3  0x00007ffff7ad9566 in annobin_assert.c_end () at /lib64/libc.so.6
#4  0x00007fffcf0ced22 in chart::sidebar::ChartColorWrapper::operator()(rtl::OUString const&, std::pair<Color, rtl::OUString> const&) (this=0x5d34780, rColor={...})
    at /home/kara/core/chart2/source/controller/sidebar/ChartColorWrapper.cxx:76
#5  0x00007fffcf0c88ac in std::_Function_handler<void (rtl::OUString const&, std::pair<Color, rtl::OUString> const&), chart::sidebar::ChartColorWrapper>::_M_invoke(std::_Any_data const&, rtl::OUString const&, std::pair<Color, rtl::OUString> const&) (__functor=..., __args#0=".uno:XLineColor", __args#1={...}) at /usr/include/c++/9/bits/std_function.h:300
#6  0x00007ffff340bafd in std::function<void (rtl::OUString const&, std::pair<Color, rtl::OUString> const&)>::operator()(rtl::OUString const&, std::pair<Color, rtl::OUString> const&) const
    (this=0x5b49bb8, __args#0=".uno:XLineColor", __args#1={...}) at /usr/include/c++/9/bits/std_function.h:690
#7  0x00007ffff3423edb in SvxColorWindow::SelectHdl(ValueSet*) (this=0x5b49760, pColorSet=0x565c180) at /home/kara/core/svx/source/tbxctrls/tbcontrl.cxx:2010
#8  0x00007ffff3423da7 in SvxColorWindow::LinkStubSelectHdl(void*, ValueSet*) (instance=0x5b49760, data=0x565c180) at /home/kara/core/svx/source/tbxctrls/tbcontrl.cxx:1992
#9  0x00007ffff263d87b in Link<ValueSet*, void>::Call(ValueSet*) const (this=0x565c580, data=0x565c180) at /home/kara/core/include/tools/link.hxx:112
#10 0x00007ffff2630e04 in ValueSet::Select() (this=0x565c180) at /home/kara/core/svtools/source/control/valueset.cxx:1470
#11 0x00007ffff262f5c5 in ValueSet::ImplEndTracking(Point const&, bool) (this=0x565c180, rPos=Point = {...}, bCancel=false) at /home/kara/core/svtools/source/control/valueset.cxx:1063
#12 0x00007ffff262f830 in ValueSet::MouseButtonUp(MouseEvent const&) (this=0x565c180, rMouseEvent=...) at /home/kara/core/svtools/source/control/valueset.cxx:1115
#13 0x00007ffff0230934 in ImplHandleMouseEvent(VclPtr<vcl::Window> const&, MouseNotifyEvent, bool, long, long, unsigned long, unsigned short, MouseEventModifiers) (xWindow=
    ..., nSVEvent=MouseNotifyEvent::MOUSEBUTTONUP, bMouseLeave=false, nX=223, nY=86, nMsgTime=8072061, nCode=1, nMode=(MouseEventModifiers::SIMPLECLICK | MouseEventModifiers::SELECT)) at /home/kara/core/vcl/source/window/winproc.cxx:706
#14 0x00007ffff023577d in ImplHandleSalMouseButtonUp(vcl::Window*, SalMouseEvent const*) (pWindow=0x47a04d0, pEvent=0x7fffffff1ae0) at /home/kara/core/vcl/source/window/winproc.cxx:2026
Comment 4 Julien Nabet 2019-11-27 20:54:31 UTC
Created attachment 156160 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 5 Commit Notification 2019-12-13 15:43:44 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e290c3f3e233f03a0b13d19553c637f0a7070fbf

tdf#129056: No need for catastrophe

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-12-13 17:24:50 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: a54b3e8b8b7bf063117eaed19a590ce6c8a14e07
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Muhammet, thanks for fixing this issue!
Comment 7 Commit Notification 2019-12-13 20:15:47 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/f12c5078facde462343ddfa2c8ed4edb0f5626c9

tdf#129056: No need for catastrophe

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.