tdf#129056: No need for catastrophe

We can continue working without hurting others
in case of an invalid reference.

Putting in a warning so that it doesn't become
a black hole which silences errors.

Change-Id: I6d75edeba227a4293b0ae16217811e49ae336a6b
Reviewed-on: https://gerrit.libreoffice.org/85111
Tested-by: Jenkins
Reviewed-by: Muhammet Kara <muhammet.kara@collabora.com>
(cherry picked from commit e290c3f3e233f03a0b13d19553c637f0a7070fbf)